# nebula_vision

./: .gitignore  CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
calib/: internal.yaml
config/: camera_profiles.yaml  vision_params.yaml
launch/: camera_driver.launch.py
nebula_vision/: camera_driver_node.py  vision_processor_node.py
nebula_vision/detectors/: balloon_detector.py  color_detector.py  qr_detector.py  rectangle_detector.py  tank_detector.py
